--- a/src/main/resources/static/styles/tournament/allTournament.css
+++ b/src/main/resources/static/styles/tournament/allTournament.css
@@ -38,6 +38,31 @@
     margin: 16px 0px;
 }
 
+.listMatch{
+    font-size: 20px;
+    font-weight: 600;
+    border-left: solid;
+    border-color: #8C69F4;
+    border-width: 4px;
+    padding-left: 10px;
+}
+
+.userRoleDisplay{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.teamNameDisplay{
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.userInfoContainer{
+    border-left: solid;
+    border-color: #8C69F4;
+    border-width: 4px;
+    padding-left: 10px;
+}
 .rectangleButtonSelectionned {
     /* Rectangle 35 */
 
@@ -108,13 +133,46 @@
     display: flex;
 }
 
-.boxListe {
+.boxList {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 5px 0px;
+    margin: 5px 0px 24px;
 }
 
+.boxOneCardMatches{
+    width: 100%;
+    background-color: #8C69F4;
+    box-shadow: 0 2px 10px #8C69F4;
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 16px 0px;
+    border-radius: 8px;
+    color:white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 16px;
+    overflow-wrap: anywhere;
+    min-height: 75px;
+}
+
+@media only screen and (max-width: 1000px) {
+    .boxOneCardMatches {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+.boxOneCardMatches:hover {
+    background-color: #6D41F3;
+    box-shadow: 0 3px 7px #8C69F4;
+}
 .ListTournament {
     font-style: normal;
     font-weight: 600;
@@ -124,23 +182,12 @@
     align-items: center;
     letter-spacing: 0.2px;
     color: #212136;
+    border-left: solid;
+    border-color: #8C69F4;
+    border-width: 4px;
+    padding-left: 10px;
 }
 
-.rectangle {
-    position: static;
-    width: 3px;
-    height: 27px;
-    left: 18px;
-    top: 18px;
-
-    background: #8C69F4;
-
-    /* Inside auto layout */
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    margin: 0px 5px;
-}
 
 @media only screen and (max-width: 1000px) {
     .primaryButton {
@@ -206,6 +253,15 @@
 }
 .textInscriptionClosed{
     color: orange;
+}
+
+div#listMatches{
+    display: flex;
+    padding-inline-end: 24px;
+    padding-inline-start: 24px;
+    flex-direction: row;
+    justify-content: space-between;
+    width: -webkit-fill-available;
 }
 
 .submitContainer {
