--- a/src/main/resources/static/styles/tournament/view.css
+++ b/src/main/resources/static/styles/tournament/view.css
@@ -79,7 +79,7 @@ ul.roundsList {
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 2px 5px;
+    padding: 5px 5px;
     border-top-right-radius: 7px;
     border-top-left-radius: 7px;
     text-transform: uppercase;
